--- a/bruteforce.html
+++ b/bruteforce.html
@@ -29,7 +29,7 @@
     <img src="apocalypse-7.jpg" id="back-image" />
     <div class="container">
       <div class="text-center form-signin">
-        <h1 class="form-signin-heading">Hello parent! The <strong>Apocalypse</strong> begins <strong>here.</strong></h2>
+        <h1 class="form-signin-heading">The <strong>Apocalypse</strong> begins <strong>here.</strong></h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
