--- a/crackpassword.html
+++ b/crackpassword.html
@@ -17,7 +17,7 @@
 			margin-right:auto;
 			font-size: 40px;
 			color: green;
-			font-family:'Lucida console';
+			font-family:'Courier New';
 		}
 		#output,.output {
 			margin-top:0px;
@@ -28,10 +28,11 @@
 		#title {
 			background-color: green;
 			color:#000;
+			padding:10px;
 		}
 		#crackerrun {
 			outline: none;
-			font-family:'Lucidatypewriter, monospace';
+			font-family:'Courier New';
 		}
 	</style>
 </head>
